--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Install dependent libraries
-        run: sudo apt-get install libpq-dev
+        run: sudo apt-get install libpq-dev diffoscope
       - name: Set up Node
         uses: actions/setup-node@v3.1.1
         with:
