--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
       postgres:
         image: postgres:14
         env:
-          POSTGRES_USER: diff
+          POSTGRES_USER: root
           POSTGRES_DB: diff_test
           POSTGRES_PASSWORD: postgres
         ports: ["5432:5432"]
@@ -43,7 +43,7 @@ jobs:
         env:
           RAILS_ENV: test
           POSTGRES_DB: diff_test
-          POSTGRES_USER: diff
+          POSTGRES_USER: root
           POSTGRES_PASSWORD: postgres
           POSTGRES_HOST: localhost
           POSTGRES_PORT: ${{ job.services.postgres.ports[5432] }}
